Make the nav drawer look more correct on tablet (#69)
Also adds support in the `%NavItem{}` struct for active/inactive bool

--- a/apps/firestorm_web/assets/css/_settings.metrics.scss
+++ b/apps/firestorm_web/assets/css/_settings.metrics.scss
@@ -5,8 +5,11 @@
 
 $border-radius: .25rem;
 
+$border-width-medium: .25rem;
+
 $padding-small: .25rem;
 $padding-medium: .5rem;
+$padding-large: 1rem;
 
 $margin-small: .25rem;
 $margin-medium: .5rem;
